# anitomy

./: CMakeLists.txt  main.cpp
anitomy/: anitomy.cpp  anitomy.h  element.cpp  element.h  keyword.cpp  keyword.h  options.h  parser.cpp  parser.h  parser_helper.cpp  parser_number.cpp  string.cpp  string.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h
